# RoboCasa-Project

./: .gitignore  .gitmodules  MUJOCO_LOG.TXT  README.md  behaviour_cloning_eval.py  chunked_imitation_train.py  common.py  custom_env.py  dataset_manager.py  environment_transformer.py  eval_and_record.py  eval_summary_v2.txt  generative_adverserial_imitation_learning.py  gym_wrapper.py  methods_combined_submit.sh  methods_combined_train.py  pyproject.toml  replay_buffer.py  rew_shaping_and_curriculum_submit.sh  rew_shaping_and_curriculum_train.py  sample_code_depr.py  test.py  train_bc.py  train_gail.py  utils.py
logs/: 17480.err  17480.out  monitor.monitor.csv  monitor_v2.monitor.csv  v2_17496.err  v2_17496.out
logs/tensorboard/PPO_1/: events.out.tfevents.1775190539.ensta-l40s01.462605.0
logs/tensorboard/PPO_2/: events.out.tfevents.1775190890.ensta-l40s01.462994.0
logs/tensorboard/PPO_3/: events.out.tfevents.1775191067.ensta-l40s01.463219.0
logs/tensorboard/PPO_4/: events.out.tfevents.1775191156.ensta-l40s01.463430.0
logs/tensorboard/PPO_5/: events.out.tfevents.1775191539.ensta-l40s01.463671.0
logs/tensorboard_v2/PPO_1/: events.out.tfevents.1775222483.ensta-l40s01.469578.0
logs/tensorboard_v2/PPO_2/: events.out.tfevents.1775222523.ensta-l40s01.469751.0
model/: actor.py  behaviour_cloning.py  critic.py  embedding.py  sac.py
notebooks/: 02_PPO_RS.ipynb  Colab_BC.ipynb  GAIL_BC.ipynb  ImitationBC.ipynb  SimpleBC.ipynb
results/: bc_eval.json  bc_losses.json  bc_model.pt
results/ppo_rs_eval_log/: evaluations.npz
(+1 files in other folders)
