[project]
name = "robocasa-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "robocasa",
    "robosuite",
    "robosuite-models>=1.0.0",
    "stable-baselines3>=2.8.0",
]

[tool.uv.sources]
torch = [
#  { index = "pytorch-cpu" },
  { index = "pytorch-cu130" },
]
torchvision = [
#  { index = "pytorch-cpu" },
  { index = "pytorch-cu130" },
]
robocasa = { path = "deps/robocasa", editable = true }
robosuite = { path = "deps/robosuite", editable = true }

#[[tool.uv.index]]
#name = "pytorch-cpu"
#url = "https://download.pytorch.org/whl/cpu"
#explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.workspace]
exclude = [
    "deps/robocasa",
    "deps/robosuite",
]

[dependency-groups]
dev = [
    "pyrefly>=0.56.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
site-package-path = [
    "deps/robocasa",
    "deps/robosuite",
]
python-interpreter-path = ".venv/bin/python"

